--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.0.0",
+    "react-slidedown": "^2.0.4",
     "react-transition-group": "1.x"
   },
   "scripts": {
