Added htaccess as per docs for running on apache server.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strainsearch",
-  "homepage": "https://geoffagnew.github.io/strainsearch",
+  "homepage": "http://strainsearch",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
