--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strainsearch",
-  "homepage": "http://strainsearch",
+  "homepage": "https://strainsearch.geoffagnew.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,8 +16,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
@@ -28,8 +26,7 @@
     "@storybook/addons": "^3.4.11",
     "@storybook/react": "^3.4.11",
     "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
-    "gh-pages": "^2.0.1"
+    "babel-runtime": "^6.26.0"
   },
   "browserslist": [
     ">0.2%",
