Modified package.json so the app works on the new production server.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strainsearch",
-  "homepage": "https://strainsearch.geoffagnew.com",
+  "homepage": "http://strainsearch.fun",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
